# Babel_2019

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  audio_test  babel_server.db  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  interface  nike.cpp  qt.conf  spec  test_c
QtNetwork/: CMakeLists.txt  QtClient.cpp  camzer  camzer.cpp  main.cpp
QtNetwork/include/: ChatDialog.hpp  Client.hpp  Connection.hpp  PeerManager.hpp  QtClient.hpp  Server.hpp
QtNetwork/srcs/: ChatDialog.cpp  Client.cpp  Connection.cpp  PeerManager.cpp  Server.cpp  network-chat.pro
Unit_Tests/Opus/: Test_Opus.cpp
audio/: CMakeLists.txt
audio/include/: PortAudio.hpp
audio/srcs/: PortAudio.cpp
babel/: CMakeLists.txt  Makefile  cmake_install.cmake
babel/srcs/: main.cpp
chat/: chat_client.cpp  chat_server.cpp  client  server
client_interface/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mainwindow.cpp
client_interface/include/: ClientInterface.hpp  QtInterface.hpp  mainwindow.h  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters
client_interface/srcs/: ClientInterface.cpp  QtInterface.cpp
database/: CMakeLists.txt  Makefile  cmake_install.cmake
database/include/: ClientDatabase.hpp  Data.hpp  Database.hpp
database/srcs/: ClientDatabase.cpp  Data.cpp  Database.cpp  database.cpp
encoder/: CMakeLists.txt
encoder/include/: OpusE.hpp
encoder/srcs/: OpusE.cpp  main.cpp
html/: _client_8hpp_source.html  _client_actions_8hpp_source.html  _client_database_8hpp_source.html  _data_8hpp_source.html  _database_8hpp_source.html  _opus_e_8hpp_source.html  _packet_8hpp_source.html  _port_audio_8hpp_source.html  _server_8hpp_source.html  _server_actions_8hpp_source.html  _server_client_8hpp_source.html  _socket_8hpp_source.html  _sockets_8hpp_source.html  _t_c_p_socket_8hpp_source.html  _u_d_p_socket_8hpp_source.html  annotated.html  class_client.html  class_client_actions-members.html  class_client_actions.html  class_client_database.html  class_data.html  class_database.html  class_encoder_system-members.html  class_encoder_system.html  class_port_audio-members.html  class_port_audio.html  class_server.html  class_server_actions-members.html  class_server_actions.html  class_server_client-members.html  class_server_client.html  class_socket-members.html  class_socket.html  class_t_c_p_socket-members.html  class_t_c_p_socket.html  class_u_d_p_socket-members.html  class_u_d_p_socket.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui___main_window-members.html  (+65 more)
html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_9.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js
latex/: annotated.tex  class_client.tex  class_client_actions.tex  class_client_database.tex  class_data.tex  class_database.tex  class_encoder_system.tex  class_port_audio.tex  class_server.tex  class_server_actions.eps  class_server_actions.tex  class_server_client.tex  class_socket.tex  class_t_c_p_socket.tex  class_u_d_p_socket.tex  class_ui_1_1_main_window.tex  class_ui___main_window.tex  classcli_1_1_client.tex  classdb_1_1_client_database.eps  classdb_1_1_client_database.tex  classdb_1_1_data.eps  classdb_1_1_data.tex  classdb_1_1_database.tex  classmain_window.eps  classmain_window.tex  classns_1_1_server.eps  classns_1_1_server.tex  classutils_1_1_packet.tex  dir_1a13248c590d33be166f7360a58443c3.tex  dir_1a26c6d5deb16993578083a7baebf555.tex  dir_2004a107f89cbc12bc3ab37e5a21d8e4.tex  dir_21708fdbd6e77552ce7b57fa0fe7c7a7.tex  dir_21ab75cc7851b1337a07375561c34387.tex  dir_2688f534a562c0159748e993bcbff777.tex  dir_2e2a2390e31d1f4337044015de6f3a01.tex  dir_4a2560334c5e8106d1cbe462a5016804.tex  dir_4b6bf4932d5983f3d1854be83d2cc677.tex  dir_7092be4b615ef33f974b7f7cb17df875.tex  dir_74a417b6d73c2392c440716db8e101ef.tex  dir_84b6c5059f355d5831282216aaf1a394.tex  (+19 more)
man/man3/: Client.3  ClientActions.3  ClientActions_info_s.3  ClientDatabase.3  Data.3  Database.3  EncoderSystem.3  PortAudio.3  Server.3  ServerActions.3  ServerClient.3  Socket.3  TCPSocket.3  UDPSocket.3  Ui_MainWindow.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_Unit_Tests_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_Unit_Tests_Opus_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_audio_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_audio_include_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_audio_srcs_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_build_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_build_CMakeFiles_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_build_CMakeFiles_3.13.4_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_build_CMakeFiles_3.13.4_CompilerIdCXX_.3  _home_adassier_Delivery_Semestre_5_Advanced_C___Babel_2019_client_interface_.3  (+28 more)
network/: CMakeLists.txt  Makefile  cmake_install.cmake
network/client/: CMakeLists.txt  Client.cpp  client.cpp
network/client/include/: Client.hpp
network/client/srcs/: Client.cpp  client.cpp  sond.cpp
network/include/: Client.hpp  ClientActions.hpp  Server.hpp  ServerActions.hpp  ServerClient.hpp  Socket.hpp  Sockets.hpp  TCPSocket.hpp  UDPSocket.hpp
network/server/: CMakeLists.txt  Server.cpp  ServerActions.cpp  ServerClient.cpp  Socket.cpp  server.cpp
network/server/include/: Server.hpp  server.hpp
network/server/srcs/: Server.cpp  server.cpp  udp.cpp
network/sockets/: Sockets.cpp  TCPSocket.cpp  UDPSocket.cpp
opus/: a.out
test/: Server.cpp  Server.hpp  client  client_tcp  client_tcp.c  client_udp  client_udp.c  server  server_tcp  server_udp.c
utils/: CMakeLists.txt  Makefile  cmake_install.cmake
(+5 files in other folders)
